Fixed title to center alignment.

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -25,12 +25,8 @@
     gap: 36px;
 
     @include mobile {
-      width: 100%;
       height: 85%;
-      gap: 20px;
       margin: auto;
-      text-align: center;
-      align-items: center;
     }
 
     @include tablet {
@@ -47,7 +43,6 @@
 
       @include mobile {
         font-size: calc(1.8rem + 0.5vw);
-        letter-spacing: 5px;
         text-align: center;
       }
 
@@ -64,11 +59,10 @@
 
       @include mobile {
         font-size: calc(2rem + 0.5vw);
-        padding: 0 10px;
       }
 
       @include tablet {
-        font-size: calc(2.5rem + 0.5vw);
+        font-size: calc(2.25rem + 0.5vw);
       }
     }
 
@@ -150,7 +144,6 @@
       top: 65px;
       right: -50px;
     }
-  
 
     // @include tablet {
     //   display: none;
